package com.sample.protobuff.domain;

import java.sql.Date;

public class SampleData {
	
	private long item1;
	private int item2;
	private int item3;
	private Date updateTime;
	
	public long getItem1() {
		return item1;
	}
	public void setItem1(long item1) {
		this.item1 = item1;
	}
	public int getItem2() {
		return item2;
	}
	public void setItem2(int item2) {
		this.item2 = item2;
	}
	public int getItem3() {
		return item3;
	}
	public void setItem3(int item3) {
		this.item3 = item3;
	}
	public Date getUpdateTime() {
		return updateTime;
	}
	public void setUpdateTime(Date updateTime) {
		this.updateTime = updateTime;
	}
	
	
}
